# Radar-Trabalhista

./: .env.example  .gitignore  CLAUDE.md  Makefile  radar_trabalhista__doc_tecnico_v1.1.docx  radar_trabalhista_doc_tecnico.md
.claude/: notes.md
.github/workflows/: ci.yml
apps/api/: .dockerignore  Dockerfile  config.py  db.py  main.py  pyproject.toml
apps/api/migrations/: 001_analytics_tables.sql  run_migrations.py
apps/api/routers/: analytics.py  caged.py  cbo.py  health.py  turnover.py
apps/api/schemas/: analytics.py  caged.py
apps/api/services/: cache.py
apps/api/tests/: conftest.py  test_analytics.py  test_caged_map.py  test_caged_series.py  test_caged_summary.py  test_cbo.py  test_health.py  test_turnover.py
apps/web/: Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
apps/web/src/components/: CAGEDChart.tsx  FilterBar.tsx  KPICard.tsx  MapaUF.tsx  MapaUFInner.tsx  SetorRanking.tsx  TabelaEvolucaoMensal.tsx
apps/web/src/hooks/: useAnalytics.ts  useCaged.ts
apps/web/src/lib/: api-client.ts  (+1 more)
dbt/: dbt_project.yml
dbt/models/marts/: mart_mercado_trabalho.sql  mart_turnover_setorial.sql
dbt/models/staging/: stg_caged.sql  stg_rais.sql
docs/plans/: 2026-03-03-dashboard-improvements-design.md  2026-03-03-dashboard-improvements-plan.md
etl/: backfill.py  bq_backfill.py  bq_backfill_dims.py  pyproject.toml  seed_refs.py
etl/flows/: caged_flow.py  rais_flow.py
etl/tasks/: download.py  load.py  transform.py  validate.py
etl/tests/: test_transform.py
infra/: docker-compose.yml  init.sql
tasks/: lessons.md  todo.md
(+15 files in other folders)
