[project]
name = "radar-trabalhista-etl"
version = "0.1.0"
description = "Radar Trabalhista — ETL Pipelines (Prefect)"
requires-python = ">=3.12"
dependencies = [
    "prefect>=2.20.0",
    "httpx>=0.28.0",
    "aiofiles>=24.0.0",
    "pandas>=2.2.0",
    "duckdb>=1.1.0",
    "pandera>=0.22.0",
    "psycopg[binary,pool]>=3.2.0",
    "py7zr>=0.22.0",
    "dbt-postgres>=1.9.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.9.0",
    "mypy>=1.14.0",
    "pytest>=8.0.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
